Java sealed classes draft